--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="keyword" content="日向坂46,ヒナタザカ46,ひなたざか46,hinatazaka46,潮紗理菜,加藤史帆,齊藤京子,
+    佐々木久美,佐々木美玲,高瀬愛奈,高本彩花,東村芽依,金村美玖,河田陽菜,小坂菜緒,富田鈴花,丹生明里,濱岸ひより,松田好花,
+    上村ひなの,髙橋未来虹,森本茉莉,山口陽世,石塚瑶季,小西夏菜実,清水理央,正源司陽子,竹内希来里,平尾帆夏,平岡海月,
+    藤嶌果歩,宮地すみれ,山下葉留花,渡辺莉奈">
+    <meta name="description" content="日向坂五期生の推しメンを決めるアプリです。決められないよっていう人参考にしてみてください。">
+    <meta property="og:title" content="HINASELECT5TH">
+    <meta property="og:description" content="日向坂五期生の推しメンを決めるアプリです。決められないよっていう人参考にしてみてください。">
+    <meta property="og:image" content="https://daytripper.site/img/hinatazaka5th.jpg">
+    <meta property="og:url" content="https://hinatazaka5th.netlify.app/"> 
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="HINASELECT5TH">
+    <!-- <link rel="icon" href="/favicon.ico"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日向坂五期生推しメンチェッカー</title>
   </head>
   <body>
