--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:site_name" content="HINASELECT5TH">
     <!-- <link rel="icon" href="/favicon.ico"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>日向坂五期生推しメンチェッカー</title>
   </head>
   <body>
